melhorias na acessibilidade do codigo

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <div class="container-lg-header">
-            <nav class="nav navbar-expand-lg  pl-5 pr-5">
+            <nav class="nav navbar-expand-lg pl-5 pr-5">
                 <a class="navbar-brand" href="#">
-                    <h1 class="d-flex"><b>PrimeFit</b><img src="./imgs/icons/peso.png" alt=""></h1>
+                    <h1 class="d-flex"><b>PrimeFit</b><img src="./imgs/icons/peso.png" alt="Logo da primeFit"></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
                     <span class="navbar-toggler-icon">
@@ -50,14 +50,14 @@
                     </div>
                 </div>
                 <div class="image">
-                    <img class="slider-img" src="./imgs/banner/banner01.png" alt="">
-                    <img class="slider-img" src="./imgs/banner/banner02.png" alt="">
-                    <img class="slider-img" src="./imgs/banner/banner03.png" alt="">
+                    <img class="slider-img" src="./imgs/banner/banner01.png" alt="imagem do banner 1">
+                    <img class="slider-img" src="./imgs/banner/banner02.png" alt="imagem do banner 2">
+                    <img class="slider-img" src="./imgs/banner/banner03.png" alt="imagem do banner 3">
                 </div>
                 
         </div>
     </section>
-    <section class="numbers-animation-bg container-lg">
+    <section id="services" class="numbers-animation-bg container-lg">
         <div class="numbers-animation-container container-lg d-flex justify-content-center align-items-center">
             <div class="d-flex justify-content-around align-items-center">
                 <div class="mr-3">
@@ -97,14 +97,14 @@
             </div>
         </div>
     </section>
-    <section id="services" class="services container-lg ">
+    <section class="services container-lg">
         <div>
             <div class="services-text d-flex flex-column mx-auto">
                 <h2><b>Descubra a Excelência</b></h2>
                 <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
             </div>
             <div class="container-services d-flex justify-content-center align-items-center">
-               <div class="card">
+               <div class="card" tabindex="0">
                     <img src="./imgs/servicos/musculacao3.jpg" alt="imagem de musculação">
                     <div class="Tipo-de-treino d-flex mt-2">
                         <p class="mr-3">Treinamento</p>
@@ -112,7 +112,7 @@
                     </div>
                     <h5><b>Musculação</b></h5>
                 </div>
-                <div class="card">
+                <div class="card" tabindex="0">
                     <img src="./imgs/servicos/ginastica3.png" alt="imagem de funcional">
                     <div class="Tipo-de-treino d-flex mt-2">
                         <p class="mr-3">Treinamento</p>
@@ -120,7 +120,7 @@
                     </div>
                     <h5><b>Funcional</b></h5>
                 </div>
-                <div class="card">
+                <div class="card" tabindex="0">
                     <img src="./imgs/servicos/funcional.png"  alt="imagem de persoal trainer">
                     <div class="Tipo-de-treino d-flex mt-2">
                         <p class="mr-3">Treinamento</p>
@@ -130,16 +130,16 @@
                 </div>
             </div>
             <div class="structures-text container-lg d-flex flex-column mx-auto">
-                <h2 class="mx-auto"><b>CONHEÇA ALGUNS DOS NOSSOS PROFISSIONAIS</b></h2>
+                <h2 class="mx-auto"><b>conheça alguns dos nossos profissionais</b></h2>
                 <p class="mx-auto mt-2">Transforme-se conosco! Profissionais apaixonados prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
             </div>
             <div class="structures container-lg ml-5 mr-5">
                 <div class="structures-container d-flex justify-content-center align-items-center">
-                    <div class="structures-card">
-                        <img class="card-img-top" src="./imgs/estrutores/team-img-1.jpg" alt="Imagem de capa do card">
+                    <div class="structures-card" tabindex="0">
+                        <img class="card-img-top" src="./imgs/estrutores/team-img-1.jpg" alt="Imagem do profissional">
                         <div class="card-body">
-                            <p class="card-title">TREINADORA DE CROSSFIT</p>
-                            <h5 class="card-text">Jessica</h5>
+                            <p>treinadora de crossfit</p>
+                            <h5>Jessica</h5>
                         </div>
                         <ul class="structures-icons">
                             <li><i class="fab fa-twitter"></i></li>
@@ -148,11 +148,11 @@
                         </ul>
                         <div class="structures-effect"></div>
                     </div>
-                    <div class="structures-card">
-                        <img class="card-img-top" src="./imgs/estrutores/team-img-2.jpg" alt="Imagem de capa do card">
+                    <div class="structures-card" tabindex="0">
+                        <img class="card-img-top" src="./imgs/estrutores/team-img-2.jpg" alt="Imagem do profissional">
                         <div class="card-body">
-                            <p class="card-title">TREINADOR DE MUSCULAÇÃO</p>
-                            <h5 class="card-text">Ramon</h5>
+                            <p>treinador de musculção</p>
+                            <h5>Ramon</h5>
                         </div>
                         <ul class="structures-icons">
                             <li><i class="fab fa-twitter"></i></li>
@@ -161,11 +161,11 @@
                         </ul>
                         <div class="structures-effect"></div>
                     </div>
-                    <div class="structures-card">
-                        <img class="card-img-top" src="./imgs/estrutores/team-img-3.jpg" alt="Imagem de capa do card">
+                    <div class="structures-card" tabindex="0">
+                        <img class="card-img-top" src="./imgs/estrutores/team-img-3.jpg" alt="imagem do profissional">
                         <div class="card-body">
-                            <p class="card-title">TREINADORA DE MUSCULAÇÃO</p>
-                            <h5 class="card-text">Juliana</h5>
+                            <p>treinadora de musculação</p>
+                            <h5>Juliana</h5>
                         </div>
                         <ul class="structures-icons">
                             <li><i class="fab fa-twitter"></i></li>
@@ -174,11 +174,11 @@
                         </ul>
                         <div class="structures-effect"></div>
                     </div>
-                    <div class="structures-card">
-                        <img class="card-img-top" src="./imgs/estrutores/team-img-4.jpg" alt="Imagem de capa do card">
+                    <div class="structures-card" tabindex="0">
+                        <img class="card-img-top" src="./imgs/estrutores/team-img-4.jpg" alt="imagem do profissional">
                         <div class="card-body">
-                            <p class="card-title">TREINADORA DE GINÁSTICA</p>
-                            <h5 class="card-text">Nayara</h5>
+                            <p>treinadora de ginástica</p>
+                            <h5>Nayara</h5>
                         </div>
                         <ul class="structures-icons">
                             <li><i class="fab fa-twitter"></i></li>
@@ -187,11 +187,11 @@
                         </ul>
                         <div class="structures-effect"></div>
                     </div>
-                    <div class="structures-card">
-                        <img class="card-img-top" src="./imgs/estrutores/team-img-5.jpg" alt="Imagem de capa do card">
+                    <div class="structures-card" tabindex="0">
+                        <img class="card-img-top" src="./imgs/estrutores/team-img-5.jpg" alt="imagem do profissional">
                         <div class="card-body">
-                            <p class="card-title">TREINADOR DE MUSCULAÇÃO</p>
-                            <h5 class="card-text">Robson</h5>
+                            <p>treinador de musculação</p>
+                            <h5>Robson</h5>
                         </div>
                         <ul class="structures-icons">
                             <li><i class="fab fa-twitter"></i></li>
@@ -204,11 +204,11 @@
             </div>
             <div class="banner-g container-lg">
                 <div class="row">
-                    <div class="container-banner-services col">
-                        <img src="./imgs/model1.jpg" alt="">
+                    <div class="container-banner-services col" tabindex="0">
+                        <img src="./imgs/model1.jpg" alt="imagem de modelos fitnes">
                     </div>
-                    <div class="container-banner-services col">
-                        <img src="./imgs/model2.jpg" alt="">
+                    <div class="container-banner-services col" tabindex="0">
+                        <img src="./imgs/model2.jpg" alt="imagem de um ciclista em ação">
                     </div>
                 </div>
             </div>
@@ -224,9 +224,9 @@
             <div id="voltar">
                 <i class="next-banck mr-5 fas fa-chevron-left" id="prev-button"></i>
             </div>
-                <div class="slider">
+                <div class="slider" tabindex="0">
                     <div class="mr-5">
-                            <img src="./imgs/depoimentos/depoimento1.jpg" alt="">
+                            <img src="./imgs/depoimentos/depoimento1.jpg" alt="imagem da aluna 1">
                     </div>
                     <div>
                         <div class="texto-depoimento">
@@ -237,7 +237,7 @@
                             <i class="fas fa-quote-right"></i>
                         </div>
                         <div class="container-cliente">
-                            <p>JULIANA TORRES</p>
+                            <p>juliana torres</p>
                             <p class="nota-depoimento">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -248,9 +248,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="slider">
+                <div class="slider" tabindex="0">
                     <div class="mr-5">
-                            <img src="./imgs/depoimentos/depoimento2.jpg" alt="">
+                            <img src="./imgs/depoimentos/depoimento2.jpg" alt="imagem da aluna 2">
                     </div>
                     <div>
                         <div class="texto-depoimento">
@@ -261,7 +261,7 @@
                             <i class="fas fa-quote-right"></i>
                         </div>
                         <div class="container-cliente">
-                            <p>JESSICA GOMES</p>
+                            <p>jessica gomes</p>
                             <p class="nota-depoimento">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -272,9 +272,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="slider">
+                <div class="slider" tabindex="0">
                     <div class="mr-5">
-                            <img src="./imgs/depoimentos/depoimento3.jpg" alt="">
+                            <img src="./imgs/depoimentos/depoimento3.jpg" alt="imagem da aluna 3">
                     </div>
                     <div>
                         <div class="texto-depoimento">
@@ -285,7 +285,7 @@
                             <i class="fas fa-quote-right"></i>
                         </div>
                         <div class="container-cliente">
-                            <p>PAULA PEREIRA</p>
+                            <p>paula pereira</p>
                             <p class="nota-depoimento">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -304,17 +304,17 @@
     <section class="calculadora-bg container-lg d-flex">
         <div class="d-flex justify-content-center align-items-center mx-auto">
             <div class="calculadora-contaitaner-img">
-                <i class="fas fa-dumbbell"></i>
+                <i class="fas fa-dumbbell" title="Ícone de haltere"></i>
             </div>
             <div class="calculadora-container container d-flex justify-content-center flex-column">
                 <h2>Cálcule seu IMC</h2>
                 <div class="divAltura">
                     <label for="altura">Altura (M)</label>
-                    <input type="number" id="altura" placeholder="Exemplo 1,75" oninput="validarInput(this)"/>
+                    <input type="number" id="altura" placeholder="Exemplo 1,75" aria-describedby="altura" oninput="validarInput(this)"/>
                 </div>
                 <div class="divPeso">
                     <label for="peso">Peso (KG)</label>
-                    <input type="number" id="peso" placeholder="Exemplo 75" oninput="validarInput(this)"/>
+                    <input type="number" id="peso" placeholder="Exemplo 75" aria-describedby="peso" oninput="validarInput(this)"/>
                 </div>
                 <div class="divCalc">
                     <button onclick="calcIMC()"><b>Calcular</b></button>
@@ -333,7 +333,7 @@
                 <div class="container-plans">
                     <div>
                         <h4>Plano Básico</h4>
-                        <p>Confira nossos beneficíos</p>
+                        <p>Confira nossos benefícios</p>
                     </div>
                     <div>
                         <p>Por 1 mês</p>
@@ -367,7 +367,7 @@
                 <div class="container-plans">
                     <div>
                         <h4>Plano Padrão</h4>
-                        <p>Confira nossos beneficíos</p>
+                        <p>Confira nossos benefícios</p>
                     </div>
                     <div>
                         <p>Por 6 meses</p>
@@ -401,7 +401,7 @@
                 <div class="container-plans">
                     <div>
                         <h4>Plano Final</h4>
-                        <p>Confira nossos beneficíos</p>
+                        <p>Confira nossos benefcios</p>
                     </div>
                     <div>
                         <p>Por 1 ano</p>
@@ -435,7 +435,7 @@
     <section id="contact" class="contact container-lg">
         <div class="contact-title container-lg d-flex justify-content-between align-items-center ml-5 mr-5">
             <div >
-                <h2 class="d-flex"><b>PrimeFit</b><img src="./imgs/icons/peso.png" alt=""></h2>
+                <h2 class="d-flex"><b>PrimeFit</b><img src="./imgs/icons/peso.png" alt="imagem de um haltere"></h2>
             </div>
             <div class="d-flex mx-auto">
                 <p>Transforme seu suor em força, seus desafios em conquistas. Juntos, construímos o melhor de você na nossa academia. #EvoluaSempre 💪✨</p>
@@ -448,27 +448,27 @@
             <div class="contact-middle">
                 <div>
                     <p>
-                        CONTATE-NOS<i class="fas fa-phone ml-1"></i>
+                        CONTATE-NOS<i class="fas fa-phone ml-1" title="icone de telefone"></i>
                     </p>
                     <h2>
-                        primefit@gmail.com<i class="far fa-envelope ml-2"></i>
+                        primefit@gmail.com<i class="far fa-envelope ml-2" title="Ícone de mesangem"></i>
                     </h2>
                     <h2>
-                        21 99999999<i class="fas fa-phone ml-2"></i>
+                        21 99999999<i class="fas fa-phone ml-2" title="Ícone de telefone"></i>
                     </h2>
                     <div class="mt-3">
                         <h5>Mensagem via whatsapp</h5>
                         <button type="button" class="btn btn-success mt-1" id="enviarMensagem">
-                            Enviar<i class="fab fa-whatsapp ml-1"></i>
+                            Enviar<i class="fab fa-whatsapp ml-1" title="Ícone de whatsapp"></i>
                         </button>
                     </div>
                 </div>
                 <div class="mt-3">
                     <p>NOSSA REDES SOCIAIS</p>
                     <ul class="d-flex">
-                        <li><i class="fab fa-twitter mr-4"></i></li>
-                        <li><i class="fab fa-instagram m-0"></i></li>
-                        <li><i class="fab fa-facebook-f ml-4"></i></li>
+                        <li><i class="fab fa-twitter mr-4" title="Ícone de twitter"></i></li>
+                        <li><i class="fab fa-instagram m-0" title="Ícone de instagram"></i></li>
+                        <li><i class="fab fa-facebook-f ml-4" title="Ícone de facebook"></i></li>
                     </ul>
                 </div>
             </div>
@@ -477,7 +477,7 @@
                 <div class="mr-5">
                     <div class="contact-local-containers">
                         <p>
-                            NOSSOS LOCAIS <i class="fas fa-map-marker-alt ml-1"></i>
+                            NOSSOS LOCAIS <i class="fas fa-map-marker-alt ml-1" title="Ícone de localização"></i>
                         </p>
                         <h2>Rio de janeiro</h2>
                         <h3>Barra da tijuca</h3>
@@ -492,7 +492,7 @@
 
                 <div class="ml-5">
                     <div class="contact-local-containers">
-                        <p>HORARIO DE FUNCIONAMENTO <i class="fas fa-clock ml-1"></i></p>
+                        <p>HORARIO DE FUNCIONAMENTO <i class="fas fa-clock ml-1" title="Ícone de horario"></i></p>
                         <h2>Segunda-feira a sexta-feira</h2>
                         <h3>Nossas portas estão abertas</h3>
                         <h3>das 07:00 às 22:00</h3>
