adição de novos arquivos

--- a/index.html
+++ b/index.html
@@ -238,13 +238,20 @@
                         </div>
                         <div class="container-cliente">
                             <p>juliana torres</p>
-                            <p class="nota-depoimento">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>&nbsp;<span>4.5</span>
-                            </p>
+                            <div class="d-flex justify-content-start align-items-center">
+                                <p class="nota-depoimento">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star-half-alt"></i>&nbsp;<span>4.5</span>
+                                </p>
+                                <div class="number-coment">
+                                    <p>
+                                        1/3
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -262,13 +269,20 @@
                         </div>
                         <div class="container-cliente">
                             <p>jessica gomes</p>
-                            <p class="nota-depoimento">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>&nbsp;<span>5.0</span>
-                            </p>
+                            <div class="d-flex justify-content-start align-items-center">
+                                <p class="nota-depoimento">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>&nbsp;<span>5.0</span>
+                                </p>
+                                <div class="number-coment">
+                                    <p>
+                                        2/3
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -286,13 +300,20 @@
                         </div>
                         <div class="container-cliente">
                             <p>paula pereira</p>
-                            <p class="nota-depoimento">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>&nbsp;<span>5.0</span>
-                            </p>
+                            <div class="d-flex justify-content-start align-items-center">
+                                <p class="nota-depoimento">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>&nbsp;<span>5.0</span>
+                                </p>
+                                <div class="number-coment">
+                                    <p>
+                                        3/3
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -401,7 +422,7 @@
                 <div class="container-plans">
                     <div>
                         <h4>Plano Final</h4>
-                        <p>Confira nossos benefcios</p>
+                        <p>Confira nossos benefícios</p>
                     </div>
                     <div>
                         <p>Por 1 ano</p>
