Adição e correção nos arquivos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p>
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
-                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem">  
+                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justifgitty-content-center align-items-center" id="enviarMensagem">  
                              Enviar Mensagem<i class="fab fa-whatsapp ml-2"></i>
                         </button>
                         
@@ -131,8 +131,8 @@
                 </div>
             </div>
             <div class="structures-text container-lg d-flex flex-column mx-auto">
-                <h2 class="mx-auto"><b>conheça alguns dos nossos profissionais</b></h2>
-                <p class="mx-auto mt-2">Transforme-se conosco! Profissionais apaixonados prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
+                <h2 class="mx-auto"><b>conheça nossos profissionais</b></h2>
+                <p class="mx-auto mt-2">Transforme-se com profissionais prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
             </div>
             <div class="structures container-lg ml-5 mr-5">
                 <div class="structures-container d-flex justify-content-center align-items-center">
@@ -205,10 +205,10 @@
             </div>
             <div class="banner-g container-lg">
                 <div class="row">
-                    <div class="container-banner-services col" tabindex="0">
+                    <div class="col" tabindex="0">
                         <img src="./imgs/model1.jpg" alt="imagem de modelos fitnes">
                     </div>
-                    <div class="container-banner-services col" tabindex="0">
+                    <div class="col" tabindex="0">
                         <img src="./imgs/model2.jpg" alt="imagem de um ciclista em ação">
                     </div>
                 </div>
@@ -233,9 +233,9 @@
                     <div>
                         <div class="texto-depoimento">
                             <i class="fas fa-quote-left"></i>
-                                <h2>
+                                <h3>
                                     Adoro a academia! Equipamentos top e instrutores super atenciosos. Recomendo de olhos fechados!
-                                </h2>
+                                </h3>
                             <i class="fas fa-quote-right"></i>
                         </div>
                         <div class="container-cliente">
@@ -264,9 +264,9 @@
                     <div>
                         <div class="texto-depoimento">
                             <i class="fas fa-quote-left"></i>
-                                <h2>
+                                <h3>
                                     Aulas incríveis! Variedade nota 10 e ambiente sempre positivo. Aqui é minha segunda casa!
-                                </h2>
+                                </h3>
                             <i class="fas fa-quote-right"></i>
                         </div>
                         <div class="container-cliente">
@@ -295,9 +295,9 @@
                     <div>
                         <div class="texto-depoimento">
                             <i class="fas fa-quote-left"></i>
-                                <h2>
+                                <h3>
                                     Atendimento impecável! Recepcionistas sempre sorridentes e espaço sempre limpo. Malhar aqui é um prazer diário!
-                                </h2>
+                                </h3>
                             <i class="fas fa-quote-right"></i>
                         </div>
                         <div class="container-cliente">
