correção no css

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p>
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
-                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justifgitty-content-center align-items-center" id="enviarMensagem">  
+                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem">  
                              Enviar Mensagem<i class="fab fa-whatsapp ml-2"></i>
                         </button>
                         
