--- a/index.html
+++ b/index.html
@@ -456,85 +456,88 @@
         </div>
     </section>
     <section id="contact" class="contact container-lg">
-        <div class="contact-title container-lg d-flex justify-content-between align-items-center ml-5 mr-5">
+        <div class="contact-title container-lg d-flex justify-content-center align-items-center">
             <div >
-                <h2 class="d-flex"><b>PrimeFit</b><img src="./imgs/icons/peso.png" alt="imagem de um haltere"></h2>
+                <h2 class="d-flex">
+                    <b>PrimeFit</b><img src="./imgs/icons/peso.png" alt="imagem de um haltere">
+                </h2>
             </div>
-            <div class="d-flex mx-auto">
-                <p>Transforme seu suor em força, seus desafios em conquistas. Juntos, construímos o melhor de você na nossa academia. #EvoluaSempre 💪✨</p>
+            <div>
+                <p>
+                    Transforme seu suor em força, seus desafios em conquistas. Juntos, construímos o melhor de você na nossa academia. #EvoluaSempre 💪✨
+
+                </p>
             </div>
         </div>
-        <div class="contact-info container-lg d-flex justify-content-between align-items-start ml-5 mr-5">
+        <div class="contact-info d-flex justify-content-center align-items-start">
             <div class="barra">
 
             </div>
-            <div class="contact-middle">
+            <div class="contact-middle d-flex flex-column">
+                <p>
+                    contate-nos<i class="fas fa-phone ml-1" title="icone de telefone"></i>
+                </p>
+                <h2>
+                    primefit@gmail.com
+                </h2>
+                <h2>
+                    (21) 99999-9999
+                </h2>
                 <div>
+                    <h5>Mensagem via whatsapp</h5>
+                    <button type="button" class="btn btn-success" id="enviarMensagem">
+                        Enviar<i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
+                    </button>
+                </div>
+            </div>
+            <div>
+                <div class="contact-local-containers">
                     <p>
-                        CONTATE-NOS<i class="fas fa-phone ml-1" title="icone de telefone"></i>
+                        nossos locais<i class="fas fa-map-marker-alt ml-1" title="Ícone de localização"></i>
                     </p>
-                    <h2>
-                        primefit@gmail.com<i class="far fa-envelope ml-2" title="Ícone de mesangem"></i>
-                    </h2>
-                    <h2>
-                        21 99999999<i class="fas fa-phone ml-2" title="Ícone de telefone"></i>
-                    </h2>
-                    <div class="mt-3">
-                        <h5>Mensagem via whatsapp</h5>
-                        <button type="button" class="btn btn-success mt-1" id="enviarMensagem">
-                            Enviar<i class="fab fa-whatsapp ml-1" title="Ícone de whatsapp"></i>
-                        </button>
-                    </div>
+                    <h2>Rio de janeiro</h2>
+                    <h3>Barra da tijuca</h3>
+                    <h3>Av logo ali, 360</h3>
                 </div>
-                <div class="mt-3">
-                    <p>NOSSA REDES SOCIAIS</p>
-                    <ul class="d-flex">
-                        <li><i class="fab fa-twitter mr-4" title="Ícone de twitter"></i></li>
-                        <li><i class="fab fa-instagram m-0" title="Ícone de instagram"></i></li>
-                        <li><i class="fab fa-facebook-f ml-4" title="Ícone de facebook"></i></li>
-                    </ul>
+                <div class="contact-local-containers">
+                    <h2>São paulo</h2>
+                    <h3>Jardins</h3>
+                    <h3>Rua Oscar Freire, 480</h3>
                 </div>
             </div>
 
-            <div class="contact-local d-flex mx-auto">
-                <div class="mr-5">
-                    <div class="contact-local-containers">
-                        <p>
-                            NOSSOS LOCAIS <i class="fas fa-map-marker-alt ml-1" title="Ícone de localização"></i>
-                        </p>
-                        <h2>Rio de janeiro</h2>
-                        <h3>Barra da tijuca</h3>
-                        <h3>Av logo ali, 360</h3>
-                    </div>
-                    <div class="contact-local-containers">
-                        <h2>São paulo</h2>
-                        <h3>Jardins</h3>
-                        <h3>Rua Oscar Freire, 480</h3>
-                    </div>
+            <div>
+                <div class="contact-local-containers">
+                    <p>horario de funcionamento<i class="fas fa-clock ml-1" title="Ícone de horario"></i></p>
+                    <h2>Segunda-feira a sexta-feira</h2>
+                    <h3>Nossas portas estão abertas</h3>
+                    <h3>das 07:00 às 22:00</h3>
                 </div>
-
-                <div class="ml-5">
-                    <div class="contact-local-containers">
-                        <p>HORARIO DE FUNCIONAMENTO <i class="fas fa-clock ml-1" title="Ícone de horario"></i></p>
-                        <h2>Segunda-feira a sexta-feira</h2>
-                        <h3>Nossas portas estão abertas</h3>
-                        <h3>das 07:00 às 22:00</h3>
-                    </div>
-                    <div class="contact-local-containers">
-                        <h2>Finais de semana</h2>
-                        <h3>Nossas portas estão abertas</h3>
-                        <h3>das 10h às 17h</h3>
-                    </div>
+                <div class="contact-local-containers">
+                    <h2>Finais de semana</h2>
+                    <h3>Nossas portas estão abertas</h3>
+                    <h3>das 10h às 17h</h3>
                 </div>
-            </div>
+            </div>  
         </div>
-        
     </section>
-    <footer class="footer-bg container-lg d-flex align-items-center">
-        <div class="mx-auto text-center">
-            <p class="m-0">© 2023 - Code by Lucas Gomes.</p>
+    <footer class="footer-bg container-lg">
+        <div class="container d-flex justify-content-between align-items-center mx-auto">
+            <div class="copyright">
+                <p>© 2023 - Code by Lucas Gomes.</p>
+            </div>
+            <div class="footer-redes-sociais d-flex align-items-center">
+                <ul class="d-flex justify-content-center align-items-center">
+                    <li><i class="fab fa-twitter" title="Ícone de twitter"></i></li>
+                    <li><i class="fab fa-instagram" title="Ícone de instagram"></i></li>
+                    <li><i class="fab fa-facebook-f" title="Ícone de facebook"></i></li>
+                </ul>
+            </div>
+            <div class="footer-termos d-flex">
+                <p>política de Privacidade</p>
+                <p>Termos e Condições</p>
+            </div>
         </div>
-        
         <button id="scrollTopButton" class="scrollTop">
             <i class="fas fa-arrow-up"></i>
         </button>
