--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         <p>
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
-                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem">  
-                             Enviar Mensagem<i class="fab fa-whatsapp ml-2"></i>
+                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="Enviar mensagem via WhatsApp">  
+                             Enviar Mensagem<i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
                         
                     </div>
@@ -209,7 +209,7 @@
                         <img src="./imgs/model1.jpg" alt="imagem de modelos fitnes">
                     </div>
                     <div class="col" tabindex="0">
-                        <img src="./imgs/model2.jpg" alt="imagem de um ciclista em ação">
+                        <img src="./imgs/model3.png" alt="imagem de um ciclista em ação">
                     </div>
                 </div>
             </div>
@@ -456,7 +456,7 @@
         </div>
     </section>
     <section id="contact" class="contact container-lg">
-        <div class="contact-title container-lg d-flex justify-content-center align-items-center">
+        <div class="contact-title container d-flex justify-content-between align-items-center">
             <div >
                 <h2 class="d-flex">
                     <b>PrimeFit</b><img src="./imgs/icons/peso.png" alt="imagem de um haltere">
@@ -473,36 +473,40 @@
             <div class="barra">
 
             </div>
-            <div class="contact-middle d-flex flex-column">
+            <address class="contact-middle d-flex flex-column">
                 <p>
                     contate-nos<i class="fas fa-phone ml-1" title="icone de telefone"></i>
                 </p>
                 <h2>
-                    primefit@gmail.com
+                    <a href="tel:+5521999999999">(21) 99999-9999</a>
                 </h2>
                 <h2>
-                    (21) 99999-9999
+                    <a href="mailto:primefit@gmail.com">primefit@gmail.com</a>
                 </h2>
                 <div>
                     <h5>Mensagem via whatsapp</h5>
-                    <button type="button" class="btn btn-success" id="enviarMensagem">
+                    <button type="button" class="btn btn-success" id="enviarMensagem" aria-label="Enviar mensagem via WhatsApp">
                         Enviar<i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                     </button>
                 </div>
-            </div>
+            </address>
             <div>
                 <div class="contact-local-containers">
                     <p>
                         nossos locais<i class="fas fa-map-marker-alt ml-1" title="Ícone de localização"></i>
                     </p>
-                    <h2>Rio de janeiro</h2>
-                    <h3>Barra da tijuca</h3>
-                    <h3>Av logo ali, 360</h3>
+                    <address>
+                        <h2>Rio de janeiro</h2>
+                        <h3>Barra da tijuca</h3>
+                        <h3>Av logo ali, 360</h3>
+                    </address>
                 </div>
                 <div class="contact-local-containers">
-                    <h2>São paulo</h2>
-                    <h3>Jardins</h3>
-                    <h3>Rua Oscar Freire, 480</h3>
+                    <address>
+                        <h2>São paulo</h2>
+                        <h3>Jardins</h3>
+                        <h3>Rua Oscar Freire, 480</h3>
+                    </address>
                 </div>
             </div>
 
@@ -510,12 +514,12 @@
                 <div class="contact-local-containers">
                     <p>horario de funcionamento<i class="fas fa-clock ml-1" title="Ícone de horario"></i></p>
                     <h2>Segunda-feira a sexta-feira</h2>
-                    <h3>Nossas portas estão abertas</h3>
+                    <h3>Estamos abertos</h3>
                     <h3>das 07:00 às 22:00</h3>
                 </div>
                 <div class="contact-local-containers">
                     <h2>Finais de semana</h2>
-                    <h3>Nossas portas estão abertas</h3>
+                    <h3>Estamos abertos</h3>
                     <h3>das 10h às 17h</h3>
                 </div>
             </div>  
