correção e adição de novos arquivos

--- a/index.html
+++ b/index.html
@@ -556,5 +556,7 @@
     <script type="text/javascript" src="./js/cards-instructor.js"></script>
     <script type="text/javascript" src="./js/slider-feedback.js"></script>
     <script type="text/javascript" src="./js/calculadora.js"></script>
+    <script type="text/javascript" src="./js/scrollToTop.js"></script>
+    
 </body>
 </html>
