correção de links

--- a/html/blog.html
+++ b/html/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./imgs/icons/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imgs/icons/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href=" ../css/style.css">
     <title>PrimeFit</title>
 </head>
@@ -11,7 +11,7 @@
     <header>
         <div class="container-lg-header">
             <nav class="nav navbar-expand-lg pl-5 pr-5">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="../index.html" target="_parent">
                     <h1 class="d-flex"><b>PrimeFit</b><img src="../imgs/icons/peso.png" alt="Logo da primeFit"></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
@@ -21,11 +21,11 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
-                        <li><a href="./index.html" class="nav-link">Home</a></li>
-                        <li><a href="#services" class="nav-link">Sobre</a></li>
-                        <li><a href="#plans" class="nav-link">Planos</a></li>
-                        <li><a href="#contact" class="nav-link">Contato</a></li>
-                        <li><a href="#contact" class="nav-link">Blog</a></li>
+                        <li><a href="../index.html" target="_parent" class="nav-link">Home</a></li>
+                        <li><a href="../index.html" target="_parent" class="nav-link">Sobre</a></li>
+                        <li><a href="../index.html" target="_parent" class="nav-link">Planos</a></li>
+                        <li><a href="../index.html" target="_parent" class="nav-link">Contato</a></li>
+                        <li><a href="../index.html" target="_parent" class="nav-link">Blog</a></li>
                     </ul>
                 </div>
             </nav>
