--- a/index.html
+++ b/index.html
@@ -25,36 +25,33 @@
                         <li><a href="#services" class="nav-link">Sobre</a></li>
                         <li><a href="#plans" class="nav-link">Planos</a></li>
                         <li><a href="#contact" class="nav-link">Contato</a></li>
-                        <li><a href="#contact" class="nav-link">Blog</a></li>
+                        <li><a href="./html/blog.html" target="_parent" class="nav-link">Blog</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
     <section class="banner container-lg">
-        <div class="container-bg-banner container d-flex mx-auto">
-                <div>
-                    <div class="text-banner">
-                        <h1>
-                            <b>
-                                melhor <span class="detail"><b>programa</b></span> para melhores resultados
-                            </b>
-                        </h1>
-                        <p>
-                            Transforme seu corpo, supere limites e alcance seus objetivos conosco!
-                        </p>
-                        <button type="button" class="btn btn-dark col-4 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="Enviar mensagem via WhatsApp">  
-                             Enviar Mensagem<i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
-                        </button>
-                        
-                    </div>
+        <div class="container">
+                <div class="text-banner">
+                    <h1>
+                        <b>
+                            melhor <span class="detail"><b>programa</b></span> para melhores resultados
+                        </b>
+                    </h1>
+                    <p>
+                        Transforme seu corpo, supere limites e alcance seus objetivos conosco!
+                    </p>
+                    <button type="button" class="btn btn-dark col-4 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="Enviar mensagem via WhatsApp">  
+                            Enviar Mensagem
+                            <i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
+                    </button>
                 </div>
                 <div class="image">
                     <img class="slider-img" src="./imgs/banner/banner01.png" alt="imagem do banner 1">
                     <img class="slider-img" src="./imgs/banner/banner02.png" alt="imagem do banner 2">
                     <img class="slider-img" src="./imgs/banner/banner03.png" alt="imagem do banner 3">
                 </div>
-                
         </div>
     </section>
     <section id="services" class="numbers-animation-bg container-lg">
