--- a/html/blog.html
+++ b/html/blog.html
@@ -25,7 +25,7 @@
                         <li><a href="../index.html" target="_parent" class="nav-link">Sobre</a></li>
                         <li><a href="../index.html" target="_parent" class="nav-link">Planos</a></li>
                         <li><a href="../index.html" target="_parent" class="nav-link">Contato</a></li>
-                        <li><a href="../index.html" target="_parent" class="nav-link">Blog</a></li>
+                        <li><a href="#" target="_parent" class="nav-link">Blog</a></li>
                     </ul>
                 </div>
             </nav>
