adição de novas funcionalidades Js e css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <i class="fas fa-bars"></i>
                     </span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <div class="js-menu collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li><a href="./index.html" class="nav-link">Home</a></li>
                         <li><a href="#services" class="nav-link">Sobre</a></li>
@@ -382,7 +382,6 @@
                     <button type="button" class="btn btn-outline-secondary">Assinar</button>
                 </div>
             </div>
-
             <div class="card-plans" style="background-image: url(./imgs/cards-plans/price-2.jpg); background-size: cover;">
                 <div class="container-plans">
                     <div>
@@ -506,7 +505,6 @@
                     </address>
                 </div>
             </div>
-
             <div>
                 <div class="contact-local-containers">
                     <p>horario de funcionamento<i class="fas fa-clock ml-1" title="Ícone de horario"></i></p>
@@ -525,7 +523,12 @@
     <footer class="footer-bg container-lg">
         <div class="container d-flex justify-content-between align-items-center mx-auto">
             <div class="copyright">
-                <p>© 2023 - Code by Lucas Gomes.</p>
+                <p class="d-flex">
+                    © 2023 - Code by  
+                    <a class="d-flex align-items-center ml-1" href="https://www.linkedin.com/in/lucaass1997/" target="_blank">
+                        Lucas Gomes.<i class="fab fa-linkedin ml-1" title="icone do linkedin"></i>
+                    </a>
+                </p>
             </div>
             <div class="footer-redes-sociais d-flex align-items-center">
                 <ul class="d-flex justify-content-center align-items-center">
@@ -543,7 +546,6 @@
             <i class="fas fa-arrow-up"></i>
         </button>
     </footer>
-
     <script type="text/javascript" src="./js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
@@ -554,6 +556,6 @@
     <script type="text/javascript" src="./js/slider-feedback.js"></script>
     <script type="text/javascript" src="./js/calculadora.js"></script>
     <script type="text/javascript" src="./js/scrollToTop.js"></script>
-    
+    <script type="text/javascript" src="./js/scroll-suave.js"></script>
 </body>
 </html>
