criação de modules Js e correções de codigos

--- a/html/blog.html
+++ b/html/blog.html
@@ -67,7 +67,8 @@
     <script type="text/javascript" src="../js/modernizr-3.5.0.min.js"></script>
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/popper.min.js"></script>
+    <script type="text/javascript" src="../js/wow.min.js"></script>
     <script type="text/javascript" src="../js/blog.js"></script>
-    <script type="text/javascript" src="../js/scrollToTop.js"></script>
+    <script type="module" src="../script.js"></script>
 </body>
 </html>
