--- a/index.html
+++ b/index.html
@@ -550,12 +550,7 @@
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/popper.min.js"></script>
-    <script type="text/javascript" src="./js/banner.js"></script>
-    <script type="text/javascript" src="./js/mensagem.js"></script>
-    <script type="text/javascript" src="./js/cards-instructor.js"></script>
-    <script type="text/javascript" src="./js/slider-feedback.js"></script>
-    <script type="text/javascript" src="./js/calculadora.js"></script>
-    <script type="text/javascript" src="./js/scrollToTop.js"></script>
-    <script type="text/javascript" src="./js/scroll-suave.js"></script>
+    <script type="text/javascript" src="./js/wow.min.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
