correção de semantica no html

--- a/html/blog.html
+++ b/html/blog.html
@@ -31,16 +31,18 @@
             </nav>
         </div>
     </header>
-    <section class="container-lg blog-bg">
-        <article class="container">
-            <div class="blog-introducao mx-auto">
-                <h1>Bem-vindo ao PrimeFit Saúde</h1>
-                <h2>Descubra o Melhor para o Seu Dia a Dia em Nosso Blog!</h2>
-            </div>
-            <ul id="app" class="container d-flex flex-column justify-content-center align-items-center blog">
-            </ul>
-        </article>
-    </section>
+    <main>
+        <section class="container-lg blog-bg">
+            <article class="container">
+                <div class="blog-introducao mx-auto">
+                    <h1>Bem-vindo ao PrimeFit Saúde</h1>
+                    <h2>Descubra o Melhor para o Seu Dia a Dia em Nosso Blog!</h2>
+                </div>
+                <ul id="app" class="container d-flex flex-column justify-content-center align-items-center blog">
+                </ul>
+            </article>
+        </section>
+    </main>
     <footer class="footer-bg container-lg">
         <div class="container d-flex justify-content-between align-items-center mx-auto">
             <div class="copyright">
